Only call to ImeDriver on ChromeOS

It's only needed when we have the UI service, which for now is only on ChromeOS.

BUG=846127
TEST=none

Change-Id: I31980540ac15a63657cb1043b59c4ad6f2f03a0e
Reviewed-on: https://chromium-review.googlesource.com/1072029
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561634}