chrome/browser/ui/views/chrome_browser_main_extra_parts_views.cc
@@ -12,7 +12,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/views/chrome_constrained_window_views_client.h"
 #include "chrome/browser/ui/views/chrome_views_delegate.h"
 #include "chrome/browser/ui/views/harmony/chrome_layout_provider.h"
-#include "chrome/browser/ui/views/ime_driver/ime_driver_mus.h"
 #include "components/constrained_window/constrained_window_views.h"
 #include "services/service_manager/sandbox/switches.h"
 
@@ -95,9 +94,6 @@ void ChromeBrowserMainExtraPartsViews::PreCreateThreads() {
 
 void ChromeBrowserMainExtraPartsViews::PreProfileInit() {
 #if defined(USE_AURA)
-  // IME driver must be available at login screen, so initialize before profile.
-  IMEDriver::Register();
-
   // Start devtools server
   network::mojom::NetworkContext* network_context =
       g_browser_process->system_network_context_manager()->GetContext();
